/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java project to get you started.
 * For more details take a look at the Java Quickstart chapter in the Gradle
 * User Manual available at https://docs.gradle.org/6.4.1/userguide/tutorial_java_projects.html
 */

plugins {
    id 'java-library'
    id 'application'
    id 'eclipse'
}

ext {
    junitVersion = "5.6.2"
    lombokVersion = "1.18.22"
}

group = 'kr.pe.kwonnam.research-java-12-to-17'
version = '0.0.1-SNAPSHOT'

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

[compileJava, compileTestJava, javadoc]*.options*.encoding = 'UTF-8'

repositories {
    mavenCentral()
    jcenter()
}

tasks.withType(JavaCompile) {
    options.compilerArgs += '--enable-preview'
}
tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}

// buildship 은 아래를 실생하지 않는다.
// 따라서 gradlew eclipse 를 실행해줘야 한다.
eclipse.jdt.file.withProperties { props ->
    props['org.eclipse.jdt.core.compiler.problem.enablePreviewFeatures']= 'enabled'
    props['org.eclipse.jdt.core.compiler.problem.reportPreviewFeatures']= 'ignore'
}

dependencies {
    implementation 'org.slf4j:jcl-over-slf4j:1.7.30'
    implementation 'org.slf4j:log4j-over-slf4j:1.7.30'
    implementation 'ch.qos.logback:logback-classic:1.2.3'

    compileOnly "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
    testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
    testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"

    implementation 'com.google.guava:guava:28.2-jre'
    implementation("org.apache.commons:commons-lang3:3.11")

    testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
    testImplementation "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
    testImplementation "org.assertj:assertj-core:3.16.1"
    testImplementation 'com.jayway.jsonpath:json-path:2.4.0'
}

configurations {
    all*.exclude group: 'commons-logging', module: 'commons-logging' // replaced with jcl-over-slf4j
    all*.exclude group: 'log4j', module: 'log4j' // replaced with log4j-over-slf4j
    all*.exclude group: 'org.apache.logging.log4j' // replaced with log4j-over-slf4j
    all*.exclude module: 'slf4j-log4j12'

    compileOnly {
        extendsFrom annotationProcessor
    }
}

test {
    useJUnitPlatform()
}


application {
    // Define the main class for the application.
    mainClassName = project.properties.get("main", 'kr.pe.kwonnam.research.java.App')
    applicationDefaultJvmArgs += "--enable-preview"
}

